// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`application 1`] = `
"<div id=\\"application\\">
    <div class=\\"container\\">
        <div class=\\"row\\">
            <div class=\\"col-12\\">
                <div class=\\"d-flex justify-content-center\\">
                    <div class=\\"jumbotron col-md-6\\">
                        <form id=\\"rss_form\\">
                            <div class=\\"form-group\\">
                                <label for=\\"rss_input_url\\">URL адрес</label>
                                <input type=\\"text\\" value=\\"\\" placeholder=\\"Введите URL\\" class=\\"form-control\\" id=\\"rss_input_url\\">
                            </div>
                            <button type=\\"submit\\" class=\\"btn btn-primary\\">Добавить</button>
                        </form>
                    </div>
                </div>
            </div>
        </div>
    </div>

    <!-- Modal -->
    <div class=\\"modal fade\\" id=\\"rss_modal\\" tabindex=\\"-1\\" role=\\"dialog\\" aria-hidden=\\"true\\">
        <div class=\\"modal-dialog modal-dialog-centered\\" role=\\"document\\">
            <div class=\\"modal-content\\">
                <div class=\\"modal-header\\">
                    <h5 class=\\"modal-title\\"></h5>
                    <button type=\\"button\\" class=\\"close\\" data-dismiss=\\"modal\\" aria-label=\\"Close\\">
                <span aria-hidden=\\"true\\">×</span>
              </button>
                </div>
                <div class=\\"modal-body\\"></div>
                <div class=\\"modal-footer\\">
                    <button type=\\"button\\" class=\\"btn btn-secondary\\" data-dismiss=\\"modal\\">Close</button>
                </div>
            </div>
        </div>
    </div>
</div>"
`;

exports[`application 2`] = `
"<div id=\\"application\\">
    <div class=\\"container\\">
        <div class=\\"row\\">
            <div class=\\"col-12\\">
                <div class=\\"d-flex justify-content-center\\">
                    <div class=\\"jumbotron col-md-6\\">
                        <form id=\\"rss_form\\">
                            <div class=\\"form-group\\">
                                <label for=\\"rss_input_url\\">URL адрес</label>
                                <input type=\\"text\\" value=\\"h\\" placeholder=\\"Введите URL\\" class=\\"form-control is-invalid\\" id=\\"rss_input_url\\">
                            </div>
                            <button type=\\"submit\\" class=\\"btn btn-primary\\">Добавить</button>
                        </form>
                    </div>
                </div>
            </div>
        </div>
    </div>

    <!-- Modal -->
    <div class=\\"modal fade\\" id=\\"rss_modal\\" tabindex=\\"-1\\" role=\\"dialog\\" aria-hidden=\\"true\\">
        <div class=\\"modal-dialog modal-dialog-centered\\" role=\\"document\\">
            <div class=\\"modal-content\\">
                <div class=\\"modal-header\\">
                    <h5 class=\\"modal-title\\"></h5>
                    <button type=\\"button\\" class=\\"close\\" data-dismiss=\\"modal\\" aria-label=\\"Close\\">
                <span aria-hidden=\\"true\\">×</span>
              </button>
                </div>
                <div class=\\"modal-body\\"></div>
                <div class=\\"modal-footer\\">
                    <button type=\\"button\\" class=\\"btn btn-secondary\\" data-dismiss=\\"modal\\">Close</button>
                </div>
            </div>
        </div>
    </div>
</div>"
`;

exports[`application 3`] = `
"<div id=\\"application\\">
    <div class=\\"container\\">
        <div class=\\"row\\">
            <div class=\\"col-12\\">
                <div class=\\"d-flex justify-content-center\\">
                    <div class=\\"jumbotron col-md-6\\">
                        <form id=\\"rss_form\\">
                            <div class=\\"form-group\\">
                                <label for=\\"rss_input_url\\">URL адрес</label>
                                <input type=\\"text\\" value=\\"http://lorem-rss.herokuapp.com/feed\\" placeholder=\\"Введите URL\\" class=\\"form-control is-valid\\" id=\\"rss_input_url\\">
                            </div>
                            <button type=\\"submit\\" class=\\"btn btn-primary\\">Добавить</button>
                        </form>
                    </div>
                </div>
            </div>
        </div>
    </div>

    <!-- Modal -->
    <div class=\\"modal fade\\" id=\\"rss_modal\\" tabindex=\\"-1\\" role=\\"dialog\\" aria-hidden=\\"true\\">
        <div class=\\"modal-dialog modal-dialog-centered\\" role=\\"document\\">
            <div class=\\"modal-content\\">
                <div class=\\"modal-header\\">
                    <h5 class=\\"modal-title\\"></h5>
                    <button type=\\"button\\" class=\\"close\\" data-dismiss=\\"modal\\" aria-label=\\"Close\\">
                <span aria-hidden=\\"true\\">×</span>
              </button>
                </div>
                <div class=\\"modal-body\\"></div>
                <div class=\\"modal-footer\\">
                    <button type=\\"button\\" class=\\"btn btn-secondary\\" data-dismiss=\\"modal\\">Close</button>
                </div>
            </div>
        </div>
    </div>
</div>"
`;

exports[`application 4`] = `
"<div id=\\"application\\">
    <div class=\\"container\\">
        <div class=\\"row\\">
            <div class=\\"col-12\\">
                <div class=\\"d-flex justify-content-center\\">
                    <div class=\\"jumbotron col-md-6\\">
                        <form id=\\"rss_form\\">
                            <div class=\\"form-group\\">
                                <label for=\\"rss_input_url\\">URL адрес</label>
                                <input type=\\"text\\" value=\\"http://lorem-rss.herokuapp.com/feed\\" placeholder=\\"Введите URL\\" class=\\"form-control is-valid\\" id=\\"rss_input_url\\">
                            </div>
                            <button type=\\"submit\\" class=\\"btn btn-primary\\">Добавить</button>
                        </form>
                    </div>
                </div>
            </div>
        </div>
    </div>

    <!-- Modal -->
    <div class=\\"modal fade\\" id=\\"rss_modal\\" tabindex=\\"-1\\" role=\\"dialog\\" aria-hidden=\\"true\\">
        <div class=\\"modal-dialog modal-dialog-centered\\" role=\\"document\\">
            <div class=\\"modal-content\\">
                <div class=\\"modal-header\\">
                    <h5 class=\\"modal-title\\"></h5>
                    <button type=\\"button\\" class=\\"close\\" data-dismiss=\\"modal\\" aria-label=\\"Close\\">
                <span aria-hidden=\\"true\\">×</span>
              </button>
                </div>
                <div class=\\"modal-body\\"></div>
                <div class=\\"modal-footer\\">
                    <button type=\\"button\\" class=\\"btn btn-secondary\\" data-dismiss=\\"modal\\">Close</button>
                </div>
            </div>
        </div>
    </div>
</div>"
`;
